# fbterm

./: CMakeLists.txt
debian/: changelog  control
debian/patches/: 00list  01_add_terminfo_path  01_add_terminfo_path.dpatch  02_force-font-height.dpatch  series
src/: config.cpp  fbconfig.cpp  fbdev.cpp  fbdev.h  fbio.cpp  fbshell.cpp  fbshell.h  fbterm.cpp  font.cpp  improxy.cpp  input.cpp  mouse.cpp  screen.cpp  screen.h  screen_render.cpp  vesadev.cpp  vesadev.h
src/lib/: shell.cpp  shell.h  termcap.h  vterm.cpp  vterm.h  vterm_action.cpp  vterm_states.cpp
util/: angbd.c
